fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
-html {
-  overflow: hidden;
-}
-
 #root {
   box-sizing: border-box;
 }
@@ -15,6 +11,12 @@ body {
   font-family: 'Raleway', sans-serif;
   font-style: normal;
   font-weight: 500;
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;
+}
+
+.body::-webkit-scrollbar {
+  display: none;  /* Safari and Chrome */
 }
 
 iframe {
